[project]
name = "radar_data_visualizer"
version = "0.1.0"
authors = [{name = "Sheikh Shaheed Rijwan Wuhan", email = "ssrwuhan09@gmail.com"}]
description = ""
readme = "README.md"
license = { file = "MIT" }
dependencies = ["tkinter"]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"